@startuml

package Entities {
    class Artista {
        - String nombre
        - String puesto
        + Artista()
        + Artista(String nombre, String puesto)
        + String toString()
    }

    class Cancion implements Comparable<Cancion> {
        - String nombre
        - String id
        - String artista
        - String duracion
        - int dailyRank
        - String tempo
        - String pais
        - String fecha
        + Cancion()
        + Cancion(String nombre, String id, String artista, String duracion, int dailyRank, String tempo, String pais, String fecha)
        + int compareTo(Cancion other)
    }
}

package "uy.edu.um" {
    class CentralOperativa {
        + main(String[] args)
    }

    class SPOTIFY {
        - String csvFile
        + getCancionesPais(String date, String country) : MyHashImpl<String, Cancion>
        + top10CancionesPais(String date, String country)
        + getCancionesFecha(String fecha) : MyHashImpl<String, MyList<Cancion>>
        + top5CancionesEnMasTop50(String fecha)
        + top7ArtistasEnRangoDeFechas(String f1, String f2)
        + getArtistasPorNombreYFecha(String nombreArtista, String fecha) : MyList<Artista>
        + aparicionesArtistaEnTop50(String nombreArtista, String fecha) : int
        + getCancionesPorFechaYTempo(String fechaInicio, String fechaFin) : MyHashImpl<String, Cancion>
        + getCantidadCancionesConTempoEnRango(String fechaInicio, String fechaFin, double tempoInicio, double tempoFin) : int
        + paisExiste(String pais) : boolean
    }
}

CentralOperativa --> SPOTIFY
CentralOperativa ..> Artista : utiliza
CentralOperativa ..> Cancion : utiliza

@enduml
